-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.1
-
-
a77b19a911c4d6c47c185a8e59ebbcec8b14bcca (qt/qtbase/dev) 433d1b7efc0118f7d2d34803cdbd654d86c3aaf9 (qt/qtbase/5.15)
When changing the current index in a ComboBox with the keyboard (up/down arrow keys) then it does not update the accessibility side.
This can be reproduced with the inspect tool on Windows, if the current is changed by the mouse then the Name value is updated correctly. If it is changed via the keyboard then it is not updated until you force a refresh.
- resulted in
-
QTBUG-97103 REG: 5.15.0->5.15.1: Under some circumstances the performance of an application on Windows when switching application focus
-
- Closed
-
| For Gerrit Dashboard: QTBUG-70621 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 298836,3 | Windows QPA: Fix missing accessible name change events | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 301002,2 | Windows QPA: Fix missing accessible name change events | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |