src/plugins/platforms/windows/uiautomation/qwindowsuiaaccessibility.cpp
@@ -167,6 +167,9 @@ void QWindowsUiaAccessibility::notifyAccessibilityUpdate(QAccessibleEvent *event
     case QAccessible::ValueChanged:
         QWindowsUiaMainProvider::notifyValueChange(static_cast<QAccessibleValueChangeEvent *>(event));
         break;
+    case QAccessible::NameChanged:
+        QWindowsUiaMainProvider::notifyNameChange(event);
+        break;
     case QAccessible::SelectionAdd:
         QWindowsUiaMainProvider::notifySelectionChange(event);
         break;
